--- a/res/xml/appwidget_provider.xml
+++ b/res/xml/appwidget_provider.xml
@@ -15,13 +15,30 @@
 -->
 
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
+    android:minWidth="260dip"
+    android:minHeight="40dip"
+    android:initialLayout="@layout/widget"
+    >
+</appwidget-provider>
+
+<!--
+<appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
+    android:minWidth="260dip"
+    android:minHeight="40dip"
+    android:previewImage="@drawable/preview"
+    android:initialLayout="@layout/widget"
+    >
+</appwidget-provider>
+
+<appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:minWidth="60dp"
     android:minHeight="30dp"
     android:updatePeriodMillis="86400000"
     android:initialLayout="@layout/appwidget_provider"
     >
 </appwidget-provider>
-
+ -->
+ 
 <!-- 
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:minWidth="60dp"
