--- a/res/drawable/appwidget_bg_clickable.xml
+++ b/res/drawable/appwidget_bg_clickable.xml
@@ -15,11 +15,10 @@
   -->
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:drawable="@drawable/appwidget_inner_pressed_c"
-        android:state_pressed="true" />
-    <item android:drawable="@drawable/appwidget_inner_focused_c"
+    <item android:drawable="@drawable/appwidget_bg_pressed" android:state_pressed="true" />
+    <item android:drawable="@drawable/appwidget_bg_focused"
         android:state_focused="true"
         android:state_enabled="true"
         android:state_window_focused="true" />
-    <item android:drawable="@android:color/transparent" />
+    <item android:drawable="@drawable/appwidget_bg" />
 </selector>
