возможно версия 2.3 + в настройках программы добавлен пункт "О программе" с переходом на сайт с описанием и отображением текущей версии * убраны предупреждения из манифеста (android:debuggable вроде как не нужен http://stackoverflow.com/questions/4580595/what-would-happen-if-android-app-is-released-with-debuggable-on/4580630#4580630) - для релиза убран тестовый парсер

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -1,6 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <PreferenceScreen
   xmlns:android="http://schemas.android.com/apk/res/android">
+  	<PreferenceCategory android:title="@string/catAbout">
+		<Preference android:title="@string/howToUse"
+            android:summary="@string/howToUseDescr"
+            android:key="howToUsePref" />
+		<Preference android:title="@string/softwareVersion"
+            android:summary="@string/softwareVersionDescr"
+            android:key="softwareVersionPref" />
+	</PreferenceCategory>
   	<PreferenceCategory android:title="@string/sourcesSettings">
        <ListPreference android:key="sources" 
        		android:title="@string/sources" 
@@ -27,6 +35,5 @@
 		<CheckBoxPreference android:key="wifiOnly" 
 			android:summary="@string/wifiOnlySummary" android:title="@string/wifiOnly">
 		</CheckBoxPreference>
-	</PreferenceCategory>
-    
+	</PreferenceCategory>    
 </PreferenceScreen>
