--- a/res/values/dimens.xml
+++ b/res/values/dimens.xml
@@ -1,4 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="widget_margin">8dp</dimen>
+    
+    <!-- SquareImage -->
+    <dimen name="contact_name_text_size">18sp</dimen>
+	<dimen name="album_img_size">160dp</dimen>
 </resources>
