--- a/res/layout/item_gallery.xml
+++ b/res/layout/item_gallery.xml
@@ -30,9 +30,8 @@
         android:text="title"
         android:maxLines="1"
         android:textAppearance="?android:attr/textAppearanceSmall"
-        android:textStyle="bold"
         android:ellipsize="end"
-         />
+        style="@style/GalleryItemShadowText"/>
 
      <TextView android:id="@+id/tv2"
         android:layout_width="wrap_content"
