+ октрыие историий изменений при обновлении и из настроек * в настройках вывод версии из appmanifest

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -5,8 +5,8 @@
 		<Preference android:title="@string/howToUse"
             android:summary="@string/howToUseDescr"
             android:key="howToUsePref" />
-		<Preference android:title="@string/softwareVersion"
-            android:summary="@string/softwareVersionDescr"
+		<Preference android:title="@string/whatsNew"
+            android:summary="@string/softwareVersion"
             android:key="softwareVersionPref" />
 	</PreferenceCategory>
   	<PreferenceCategory android:title="@string/sourcesSettings">
