- история изменений при запуске обоев * история изменений открывается при открытии галереи * в галерее сверху отображается сообщение о виджете, если нет сохраненных изображений

--- a/res/layout-land/gallerygrid.xml
+++ b/res/layout-land/gallerygrid.xml
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	android:layout_width="fill_parent" 
 	android:layout_height="fill_parent">
 	
+    <include
+       android:id="@+id/gallery_include"
+       android:layout_width="wrap_content"
+       android:layout_height="wrap_content"
+       layout="@layout/null_include" />
+
 	<GridView android:id="@+id/PhoneImageGrid"
 		android:layout_width="fill_parent" 
 		android:layout_height="fill_parent"
@@ -12,4 +18,4 @@
 		android:stretchMode="columnWidth" 
 		android:gravity="center"/>
 	
-</RelativeLayout>
+</LinearLayout>
