--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -6,6 +6,7 @@
         <item>flickr.com</item>
         <item>nationalgeographic.com</item>
         <item>earthshots.com</item>
+        <item>bing.com</item>
     </string-array>
 
     <string-array name="sourcesValues">
@@ -13,5 +14,6 @@
         <item>2</item>
         <item>3</item>
         <item>7</item>
+        <item>8</item>
     </string-array>
 </resources>
