--- a/res/layout-land/gallerygrid.xml
+++ b/res/layout-land/gallerygrid.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:layout_width="fill_parent" 
-	android:layout_height="fill_parent">
+    android:orientation="vertical"
+	android:layout_width="match_parent" 
+	android:layout_height="match_parent">
 	
     <include
-       android:id="@+id/gallery_include"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       layout="@layout/null_include" />
+        android:id="@+id/gallery_include"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        layout="@layout/install_wallpaper_include" />
 
 	<GridView android:id="@+id/PhoneImageGrid"
-		android:layout_width="fill_parent" 
-		android:layout_height="fill_parent"
+		android:layout_width="match_parent" 
+		android:layout_height="0dp"
+		android:layout_weight="2"
 		android:numColumns="3" 
 		android:verticalSpacing="5dp"
 		android:horizontalSpacing="5dp" 
