--- a/res/layout/install_wallpaper_include.xml
+++ b/res/layout/install_wallpaper_include.xml
@@ -6,7 +6,6 @@
 
 	<TextView
 	    android:id="@+id/tv_install_widget"
-	    style="@style/GalleryItemShadowText"
 	    android:layout_width="match_parent"
 	    android:layout_height="0dp"
 	    android:layout_weight="1"
@@ -14,7 +13,8 @@
 	    android:maxLines="10"
 	    android:padding="5dp"
 	    android:text="@string/installWallpaper"
-	    android:textAppearance="?android:attr/textAppearanceSmall" />
+	    android:textAppearance="?android:attr/textAppearanceSmall"
+	    style="@style/GalleryIncludeText" />
 
 	<LinearLayout
 	    android:layout_width="match_parent"
