--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -11,5 +11,11 @@
 		<item name="android:shadowDy">1</item>	
 		<item name="android:shadowRadius">2</item>
   	</style>
+
+    <style name="GalleryIncludeText">
+        <item name="android:padding">2dp</item>
+    	<item name="android:textSize">16sp</item>
+		<item name="android:textColor">@color/grey_font</item>
+  	</style>
     
 </resources>
