--- a/res/values/colors.xml
+++ b/res/values/colors.xml
@@ -27,6 +27,8 @@
     <color name="param_header_text">#FFFFFF</color>
     <color name="transparent">#00000000</color>
     
+    <color name="action_bar_background">#2F222222</color>
+    
     <!-- Help -->
     <color name="help_view">#ff404040</color>
     <color name="help_button_view">#ffcccccc</color>
