--- a/res/layout-large/gallerygrid.xml
+++ b/res/layout-large/gallerygrid.xml
@@ -14,7 +14,7 @@
 	        android:layout_height="wrap_content"
 			android:visibility="invisible"	        
 	        layout="@layout/null_include" />
-	
+	    
 	    <GridView android:id="@+id/PhoneImageGrid"
 			android:layout_width="match_parent" 
 			android:layout_height="0dp"
@@ -27,6 +27,17 @@
 		
 	</LinearLayout>
     
+    	<TextView
+	    android:id="@+id/galleryWelcomeText"
+	    android:layout_gravity="center"
+	    android:inputType="textMultiLine"
+	    android:layout_width="wrap_content"
+	    android:layout_height="wrap_content"
+	    android:layout_margin="20dp"
+	    android:text="@string/galleryWelcomeText"
+	    android:textAppearance="?android:attr/textAppearanceLarge" 
+	    android:visibility="invisible" />
+	    	
     <include
         android:id="@+id/gallery_actionbar_include"
         android:layout_width="wrap_content"
