!!! версия 2.10 * исправлены ошибки и предупреждения Lint

--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-	<string-array name="sourcesArray">
+	<string-array name="sourcesArray" translatable="false">
         <item>fotki.yandex.ru</item>
         <item>flickr.com</item>
         <item>nationalgeographic.com</item>
@@ -9,7 +9,7 @@
         <item>bing.com</item>
     </string-array>
 
-    <string-array name="sourcesValues">
+    <string-array name="sourcesValues" translatable="false">
         <item>1</item>
         <item>2</item>
         <item>3</item>
