--- a/res/layout/help.xml
+++ b/res/layout/help.xml
@@ -7,7 +7,7 @@
 
   <WebView android:id="@+id/help_contents"
            android:layout_width="fill_parent"
-           android:layout_height="wrap_content"
+           android:layout_height="0dp"
            android:layout_weight="1"
            android:fadingEdge="vertical"
            android:fadingEdgeLength="12dip"/>
@@ -15,11 +15,9 @@
   <LinearLayout
       android:layout_width="fill_parent"
       android:layout_height="wrap_content"
-      android:layout_weight="0"
       android:orientation="horizontal"
       android:gravity="center"
       android:padding="4dip"
-      android:weightSum="1"
       android:background="@color/help_button_view">
 
     <Button android:id="@+id/back_button"
