--- a/res/layout/item_gallery.xml
+++ b/res/layout/item_gallery.xml
@@ -1,10 +1,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:custom="http://schemas.android.com/apk/res/hram.android.PhotoOfTheDay"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/relativeLayout1"
     android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    >
-   
+    android:layout_height="wrap_content" >
+
     <hram.android.PhotoOfTheDay.views.SquareImage
         android:id="@+id/image"
         android:layout_width="fill_parent"
@@ -12,35 +12,33 @@
         android:layout_alignParentLeft="true"
         android:layout_alignParentTop="true"
         android:scaleType="centerCrop"
-        custom:fixedAlong="width"/>
-    
-    <LinearLayout 
-		android:orientation="vertical"
-        android:layout_width="wrap_content"
-    	android:layout_height="wrap_content"
-        android:layout_below="@+id/album_artwork"
-        android:layout_alignLeft="@id/album_artwork"
-        android:layout_alignRight="@id/album_artwork"
-        android:padding="3dp"
-        >
+        custom:fixedAlong="width" />
 
-     <TextView android:id="@+id/tv1"
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="title"
-        android:maxLines="1"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-        android:ellipsize="end"
-        style="@style/GalleryItemShadowText"/>
+        android:orientation="vertical"
+        android:padding="3dp" >
 
-     <TextView android:id="@+id/tv2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="name"
-        android:maxLines="1"
-        android:ellipsize="end"
-        android:textAppearance="?android:attr/textAppearanceSmall"
-         />
+        <TextView android:id="@+id/tv1"
+            style="@style/GalleryItemShadowText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:text="title"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            tools:ignore="HardcodedText" />
+
+        <TextView android:id="@+id/tv2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:ellipsize="end"
+            android:maxLines="1"
+            android:text="name"
+            android:textAppearance="?android:attr/textAppearanceSmall"
+            android:visibility="gone"
+            tools:ignore="HardcodedText" />
     </LinearLayout>
 
 </RelativeLayout>
