--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -36,6 +36,19 @@
             android:summary="@string/disableScrolingPrefSummary"
             android:disableDependentsState="True">
 		</CheckBoxPreference>
+		<CheckBoxPreference android:title="@string/programScrolingPref"
+            android:summary="@string/programScrolingPrefSummary"
+            android:key="programScrolingPref"
+            android:dependency="disableScrolingPref">
+       </CheckBoxPreference>
+       <ListPreference android:key="scrollingEffect" 
+       		android:title="@string/scrollingEffect" 
+       		android:summary="@string/scrollingEffectSummary" 
+       		android:entries="@array/scrollingEffectArray" 
+       		android:entryValues="@array/scrollingEffectValues"
+       		android:defaultValue="1"
+       		android:dependency="programScrolingPref">
+       </ListPreference>
 	</PreferenceCategory>
 	<PreferenceCategory android:title="@string/networkSettings">
 		<CheckBoxPreference android:key="wifiOnly" 
