--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -7,6 +7,7 @@
         <item>nationalgeographic.com</item>
         <item>earthshots.com</item>
         <item>bing.com</item>
+        <item>dieselstation.com (cars)</item>
     </string-array>
 
     <string-array name="sourcesValues" translatable="false">
@@ -15,6 +16,17 @@
         <item>3</item>
         <item>7</item>
         <item>8</item>
+        <item>9</item>
+    </string-array>
+    
+	<string-array name="scrollingEffectArray" translatable="false">
+        <item>@string/effectSpring</item>
+        <item>@string/effectJump</item>
+    </string-array>
+
+    <string-array name="scrollingEffectValues" translatable="false">
+        <item>1</item>
+        <item>2</item>
     </string-array>
     
 	<string-array name="scrollingEffectArray" translatable="false">
