--- a/res/layout/widget.xml
+++ b/res/layout/widget.xml
@@ -35,16 +35,9 @@
         <ImageView
             android:id="@+id/img_wifi"
             android:layout_width="match_parent"
-            android:layout_height="0dip"
-            android:layout_weight="1"
+            android:layout_height="match_parent"
             android:scaleType="center"
-            />
-
-        <ImageView
-            android:id="@+id/ind_wifi"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="fitXY"
+            android:contentDescription="gallery"
             />
         </LinearLayout>
 
@@ -68,18 +61,9 @@
         <ImageView
             android:id="@+id/img_bluetooth"
             android:layout_width="match_parent"
-            android:layout_height="0dip"
-            android:layout_weight="1"
+            android:layout_height="match_parent"
             android:scaleType="center"
             />
-
-        <ImageView
-            android:id="@+id/ind_bluetooth"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="fitXY"
-            />
-
     </LinearLayout>
 
     <ImageView
@@ -102,16 +86,8 @@
         <ImageView
             android:id="@+id/img_gps"
             android:layout_width="match_parent"
-            android:layout_height="0dip"
-            android:layout_weight="1"
+            android:layout_height="match_parent"
             android:scaleType="center"
-            />
-
-        <ImageView
-            android:id="@+id/ind_gps"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="fitXY"
             />
     </LinearLayout>
 
@@ -135,16 +111,8 @@
         <ImageView
             android:id="@+id/img_sync"
             android:layout_width="match_parent"
-            android:layout_height="0dip"
-            android:layout_weight="1"
+            android:layout_height="match_parent"
             android:scaleType="center"
-            />
-
-        <ImageView
-            android:id="@+id/ind_sync"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="fitXY"
             />
     </LinearLayout>
 
