--- a/res/layout/widget_dark.xml
+++ b/res/layout/widget_dark.xml
@@ -39,6 +39,13 @@
             android:layout_weight="1"
             android:scaleType="center"
             />
+
+        <ImageView
+            android:id="@+id/ind_wifi"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY"
+            />
         </LinearLayout>
 
     <ImageView
@@ -65,6 +72,14 @@
             android:layout_weight="1"
             android:scaleType="center"
             />
+
+        <ImageView
+            android:id="@+id/ind_bluetooth"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY"
+            />
+
     </LinearLayout>
 
     <ImageView
@@ -91,6 +106,13 @@
             android:layout_weight="1"
             android:scaleType="center"
             />
+
+        <ImageView
+            android:id="@+id/ind_gps"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY"
+            />
     </LinearLayout>
 
     <ImageView
@@ -116,6 +138,13 @@
             android:layout_height="0dip"
             android:layout_weight="1"
             android:scaleType="center"
+            />
+
+        <ImageView
+            android:id="@+id/ind_sync"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:scaleType="fitXY"
             />
     </LinearLayout>
 
