--- a/res/layout/toast_set_up_layout.xml
+++ b/res/layout/toast_set_up_layout.xml
@@ -11,7 +11,8 @@
         android:layout_width="wrap_content"
         android:layout_height="fill_parent"
         android:layout_marginRight="10dp"
-        android:src="@drawable/icon" />
+        android:src="@drawable/icon"
+        android:contentDescription="@string/nullString"/>
 
     <TextView android:id="@+id/text"
         android:layout_width="wrap_content"
