--- a/res/layout/widget_dark.xml
+++ b/res/layout/widget_dark.xml
@@ -21,137 +21,60 @@
     android:gravity="center"
     android:background="@drawable/appwidget_dark_bg_clickable" >
 
-    <LinearLayout
-        android:id="@+id/btn_wifi"
-        android:layout_width="0dip"
-        android:layout_weight="1"
-        android:layout_height="match_parent"
-        android:paddingTop="0dp"
-        android:background="@drawable/appwidget_button_left"
-        android:clickable="true"
-        android:focusable="true"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/img_wifi"
-            android:layout_width="match_parent"
-            android:layout_height="0dip"
-            android:layout_weight="1"
-            android:scaleType="center"
-            />
-
-        <ImageView
-            android:id="@+id/ind_wifi"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="fitXY"
-            />
-        </LinearLayout>
+	<ImageView
+	    android:id="@+id/img_wifi"
+	    android:layout_width="match_parent"
+	    android:layout_height="match_parent"
+	    android:layout_weight="1"
+	    android:scaleType="center"
+	    android:contentDescription="@string/openGallery"
+	    />
 
     <ImageView
         android:layout_width="1dip"
         android:layout_height="match_parent"
         android:background="@drawable/appwidget_settings_divider_holo"
+        android:contentDescription="@string/nullString"
         />
 
-    <LinearLayout
-        android:id="@+id/btn_bluetooth"
-        android:layout_width="0dip"
-        android:layout_weight="1"
-        android:layout_height="match_parent"
-        android:paddingTop="0dp"
-        android:background="@drawable/appwidget_button_center"
-        android:clickable="true"
-        android:focusable="true"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/img_bluetooth"
-            android:layout_width="match_parent"
-            android:layout_height="0dip"
-            android:layout_weight="1"
-            android:scaleType="center"
-            />
-
-        <ImageView
-            android:id="@+id/ind_bluetooth"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="fitXY"
-            />
-
-    </LinearLayout>
-
     <ImageView
-        android:layout_width="1dip"
+        android:id="@+id/img_bluetooth"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/appwidget_settings_divider_holo"
+	    android:layout_weight="1"
+        android:scaleType="center"
+        android:contentDescription="@string/saveImage"
         />
 
-    <LinearLayout
-        android:id="@+id/btn_gps"
-        android:layout_width="0dip"
-        android:layout_weight="1"
+    <ImageView
+        android:layout_width="1dip"
         android:layout_height="match_parent"
-        android:paddingTop="0dp"
-        android:background="@drawable/appwidget_button_center"
-        android:clickable="true"
-        android:focusable="true"
-        android:orientation="vertical">
+        android:background="@drawable/appwidget_settings_divider_holo"
+        android:contentDescription="@string/nullString"
+        />
 
-        <ImageView
-            android:id="@+id/img_gps"
-            android:layout_width="match_parent"
-            android:layout_height="0dip"
-            android:layout_weight="1"
-            android:scaleType="center"
-            />
-
-        <ImageView
-            android:id="@+id/ind_gps"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="fitXY"
-            />
-    </LinearLayout>
+    <ImageView
+        android:id="@+id/img_gps"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+	    android:layout_weight="1"
+        android:scaleType="center"
+        android:contentDescription="@string/openSettings"
+        />
 
     <ImageView
         android:layout_width="1dip"
         android:layout_height="match_parent"
         android:background="@drawable/appwidget_settings_divider_holo"
+        android:contentDescription="@string/nullString"
         />    
 
-    <LinearLayout
-        android:id="@+id/btn_sync"
-        android:layout_width="0dip"
-        android:layout_weight="1"
-        android:layout_height="match_parent"
-        android:paddingTop="0dp"
-        android:background="@drawable/appwidget_button_center"
-        android:clickable="true"
-        android:focusable="true"
-        android:orientation="vertical">
-
-        <ImageView
-            android:id="@+id/img_sync"
-            android:layout_width="match_parent"
-            android:layout_height="0dip"
-            android:layout_weight="1"
-            android:scaleType="center"
-            />
-
-        <ImageView
-            android:id="@+id/ind_sync"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="fitXY"
-            />
-    </LinearLayout>
-
     <ImageView
-        android:layout_width="1dip"
+        android:id="@+id/img_sync"
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/appwidget_settings_divider_holo"
+	    android:layout_weight="1"
+        android:scaleType="center"
+        android:contentDescription="@string/openSettings"
         />
-        
 </LinearLayout>
