+ настройка активации скролинга для альбомной ориентации
+ настройка активации скролинга для альбомной ориентации
* центрирование обоев по высоте

--- a/res/xml/preferences.xml
+++ b/res/xml/preferences.xml
@@ -65,6 +65,11 @@
        		android:defaultValue="1"
        		android:dependency="programScrolingPref">
        </ListPreference>
+		<CheckBoxPreference android:title="@string/wideWidthPref"
+            android:summary="@string/wideWidthPrefSummary"
+            android:key="wideWidthPref"
+            android:dependency="disableScrolingPref">
+       </CheckBoxPreference>
        <EditTextPreference
 			android:key="numVirtualScreens"
 			android:title="@string/numVirtualScreens"
